# vins_android

./: .gitignore  README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/vins/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ViewController.cpp  ViewController.hpp  native-lib.cpp
app/src/main/cpp/src/: VINS.cpp  VINS.hpp  draw_result.cpp  draw_result.hpp  feature_manager.cpp  feature_manager.hpp  feature_tracker.cpp  feature_tracker.hpp  global_param.cpp  imu_factor.h  imu_factor_pnp.h  inital_sfm.cpp  inital_sfm.hpp  initial_aligment.cpp  initial_aligment.hpp  integration_base.h  motion_estimator.hpp  pose_local_parameterization.hpp  utility.hpp
app/src/main/cpp/src/DVision/: BRIEF.cpp
app/src/main/cpp/src/loop/: keyframe.cpp  keyframe.h
app/src/main/java/com/example/vins/: LogCatHelper.java  MainActivity.java  VinsJNI.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/vins/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
